syntax = "proto3";

package cosmoslinux.cosmoslinux;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmoslinux/cosmoslinux/params.proto";

option go_package = "cosmos-linux/x/cosmoslinux/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos-linux/cosmoslinux/params";
  
  }
  
  // Queries a list of Output items.
  rpc Output (QueryOutputRequest) returns (QueryOutputResponse) {
    option (google.api.http).get = "/cosmos-linux/cosmoslinux/output";
  
  }
  
  // Queries a list of CommandsList items.
  rpc CommandsList (QueryCommandsListRequest) returns (QueryCommandsListResponse) {
    option (google.api.http).get = "/cosmos-linux/cosmoslinux/commands_list";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryOutputRequest {
  string machine_id = 1;
}

message QueryOutputResponse {
  string output = 1;
}

message QueryCommandsListRequest {
  string machine_id = 1;
}

message QueryCommandsListResponse {
  repeated string commands = 1;
}

